# football-data-warehouse

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  config.yml  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: build.yml  dvc-raw-sync.yml  linting.yml  main.yml  test-scheduler.yml
data/: .gitignore  fifa_country_catalogue.parquet  prep.dvc  team_mapping.parquet
data/raw/: .gitignore  clubs.json.gz.dvc  fbref.dvc  squads.json.gz.dvc  transfermarkt.dvc
dbt/: .gitignore  dbt_project.yml  profiles.yml
dbt/macros/: export_table.sql  fbref_apply_common.sql  fbref_common.sql  fbref_common_cleaners.sql  fbref_wages.sql  fbref_wages_cleaners.sql
dbt/models/curated/: _curated__models.yml  valuations.sql
dbt/models/staging/fbref/: _fbref__models.yml  _fbref__sources.yml  stg_fbref__player_defense.sql  stg_fbref__player_gca.sql  stg_fbref__player_keeper.sql  stg_fbref__player_keeper_adv.sql  stg_fbref__player_misc.sql  stg_fbref__player_passing.sql  stg_fbref__player_passing_type.sql  stg_fbref__player_playing_time.sql  stg_fbref__player_possession.sql  stg_fbref__player_shooting.sql  stg_fbref__player_standard_stats.sql  stg_fbref__player_wages.sql
dbt/models/staging/transfermarkt/: _transfermarkt__models.yml  _transfermarkt__sources.yml  stg_transfermarkt__squads.sql
dbt_pipeline/: .gitignore  dbt_project.yml  profiles.yml
dbt_pipeline/duckdb/: database.db
dbt_pipeline/models/staging/fbref/: _fbref__models.yml  _fbref__sources.yml
dbt_pipeline/models/staging/transfermarkt/: _transfermarkt__models.yml  _transfermarkt__sources.yml  stg_transfermarkt__squads.sql
extractors/transfermarkt/: extract.py  run.sh
foothouse/: utils.py
foothouse/downloaders/: s3.py
foothouse/extractors/: fbref.py  seeds.py  settings.py  transfermarkt.py
foothouse/orchestrator/: dagster.yaml  definitions.py  jobs.py  partitions.py  project.py
foothouse/orchestrator/assets/: dbt.py  fbref.py  seeds.py  transfermarkt.py
foothouse/pref/: deployment.py  flows.py
foothouse/pref/tasks/: transfermarkt.py
foothouse/utils/: __init__.py
infra/: main.tf
orchestrator/: .gitignore  config.yaml  dagster.yaml  definitions.py  project.py
orchestrator/assets/: transfermarkt.py
orchestrator/orchestrator/: __init__.py  constants.py  definitions.py  jobs.py  partitions.py  project.py  resources.py
orchestrator/orchestrator/assets/: dbt.py  fbref.py  seeds.py  transfermarkt.py
orchestrator/orchestrator/assets/fbref/: player_defense.py  player_gca.py  player_keeper.py  player_keeper_adv.py  player_misc.py  player_passing.py  player_passing_type.py  player_playing_time.py  player_possession.py  player_shooting.py  player_standard_stats.py
orchestrator/tests/: test_definitions.py
scripts/: bootstrap.sh  run_local.sh
src/: bootstrap.sh  run.sh  version.sh
src/extractors/: fbref.py  seeds.py  settings.py  transfermarkt.py
src/uploaders/: generate_kaggle_schema.py
utils/: __init__.py  _read_config.py
