[project]
name = "football-data-warehouse"
version = "0.1.0"
description = "Warehouse for football data from multiple sources"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12.0"
dependencies = [
    "dagster-dbt>=0.25.3",
    "dagster>=1.9.3",
    "dagster-webserver>=1.9.3",
    "dagster-aws>=0.25.3",
    "dbt-core>=1.8.8",
    "dbt-duckdb>=1.9.1",
    "scrapy>=2.12.0",
    "black>=24.10.0",
    "isort>=5.13.2",
    "pandas>=2.2.3",
    "pycountry>=24.6.1",
    "pycountry-convert>=0.7.2",
    "pydantic-settings>=2.6.1",
    "football-data-extractor",
    "dagit>=1.9.4",
]

[tool.uv.sources]
football-data-extractor = { git = "https://github.com/chonalchendo/football-data-extractor.git" }

[tool.dagster]
module_name = 'orchestrator'
